# primesensor

./: .gitcloned  CMakeLists.txt  primesensor-config.cmake  sensorkin4win-config.cmake
Data/: GlobalDefaultsKinect.ini
Platform/Linux/Install/: 55-primesense-usb.rules  blacklist-gspca-kinect.conf
Platform/Win32/Driver/: psdrv3.inf
Source/XnDDK/: XnDepthStream.cpp
Source/XnDeviceSensorV2/: XnDeviceSensorIO.cpp  XnDeviceSensorIO.h  XnHostProtocol.cpp  XnSensor.cpp  XnSensorClient.cpp
